@@ -2,7 +2,6 @@ package com.jonjam.weathermcp.locations.autocomplete;
 
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -11,15 +10,16 @@ import org.springframework.stereotype.Component;
 public class LocationsAutocompleteGateway {
 
   private final AccuWeatherLocationsAutocompleteClient client;
+  private final LocationSuggestionMapper locationSuggestionMapper;
 
-  public List<String> autocompleteForCitiesAndPointsOfInterest(
+  public List<LocationSuggestionDto> autocompleteForCitiesAndPointsOfInterest(
       final String partialName, final Locale language) {
 
     // TODO add error handling
     return client
         .autocompleteForCitiesAndPointsOfInterest(partialName, language.toLanguageTag())
         .stream()
-        .map(AccuWeatherLocationsAutocompleteDto::getLocalizedName)
-        .collect(Collectors.toList());
+        .map(locationSuggestionMapper::toLocationSuggestionDto)
+        .toList();
   }
 }
